--- a/reactVR_course/package.json
+++ b/reactVR_course/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactVR_course",
+  "name": "IteraGame",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,10 +14,8 @@
     "react": "16.0.0",
     "react-native": "~0.48.0",
     "react-vr": "~2.0.0",
-    "react-vr-gaze-button": "^0.1.4",
     "react-vr-web": "~2.0.0",
     "three": "^0.87.0",
-    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
