--- a/reactVR_course/package.json
+++ b/reactVR_course/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactVR_course",
+  "name": "IteraGame",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,9 +13,10 @@
     "ovrui": "~2.0.0",
     "react": "16.0.0",
     "react-native": "~0.48.0",
-    "three": "^0.87.0",
     "react-vr": "~2.0.0",
-    "react-vr-web": "~2.0.0"
+    "react-vr-web": "~2.0.0",
+    "three": "^0.87.0",
+    "webvr-polyfill": "^0.10.2"
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
