--- a/reactVR_course/package.json
+++ b/reactVR_course/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ovrui": "~2.0.0",
     "react": "16.0.0",
+    "react-dom": "^16.2.0",
     "react-native": "~0.48.0",
     "react-vr": "~2.0.0",
     "react-vr-web": "~2.0.0",
