--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-vr": "~2.0.0",
     "react-vr-web": "~2.0.0",
     "three": "^0.87.0",
-    "webvr-polyfill": "immersive-web/webvr-polyfill#a942181d743f382bd7d5f1dba24db232b2ba18ec"
+    "webvr-polyfill": "immersive-web/webvr-polyfill#a942181d743f382bd7d5f1dba24db232b2ba18ec",
+    "react-native-animated-math": "0.1.0"
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
