--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "electron": "^2.0.8",
+    "fresh": "^0.5.2",
     "ovrui": "~2.0.0",
     "react": "16.0.0",
     "react-dom": "^16.2.0",
