--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ovrui": "~2.0.0",
     "react": "16.0.0",
     "react-dom": "^16.2.0",
-    "react-native": "~0.48.0",
+    "react-native": "^0.59.9",
     "react-native-animated-math": "0.1.0",
     "react-vr": "~2.0.0",
     "react-vr-web": "~2.0.0",
@@ -25,10 +25,10 @@
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react-native": "^1.9.1",
-    "babel-preset-env": "1.6.1",
-    "jest": "^19.0.2",
-    "react-devtools": "^2.5.2",
+    "jest": "^24.8.0",
+    "react-devtools": "^3.6.1",
     "react-test-renderer": "16.0.0",
     "xopen": "1.0.0"
   },
